--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>Dots io Unblocked</title>
+    <link rel="canonical" href="https://ubg17.github.io/DotsIO/" />
+    <script>
+        window.location= "https://ubg17.github.io/DotsIO/";
+    </script>
     <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="full-screen" content="true" />
